Fix a buffer overflow problem.
Submitted by:	 guy@device.dyndns.org

--- a/comms/viewfax/Makefile
+++ b/comms/viewfax/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	viewfax
 PORTVERSION=	2.3
+PORTREVISION=	1
 CATEGORIES=	comms
 MASTER_SITES=	ftp://ftp.leo.org/pub/comp/os/unix/networking/mgetty/
 
