--- a/devel/rubygem-bio/Makefile
+++ b/devel/rubygem-bio/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	bio
 PORTVERSION=	1.4.3.0001
+PORTREVISION=	1
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
@@ -15,6 +16,9 @@ LICENSE_COMB=	dual
 USE_RUBY=	yes
 USE_RUBYGEMS=	yes
 RUBYGEM_AUTOPLIST=	yes
+USES=		shebangfix
+SHEBANG_FILES=	sample/biofetch.rb
+ruby_OLD_CMD=	/usr/proj/bioruby/bin/ruby
 
 PLIST_FILES=	bin/bioruby \
 		bin/br_biofetch.rb \
