--- a/www/py-aiohttp/Makefile
+++ b/www/py-aiohttp/Makefile
@@ -1,18 +1,18 @@
 PORTNAME=	aiohttp
-PORTVERSION=	3.8.4
-PORTREVISION=	1
+PORTVERSION=	3.8.5
 CATEGORIES=	www python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Async http client/server framework (asyncio)
-WWW=		https://github.com/aio-libs/aiohttp
+WWW=		https://docs.aiohttp.org/en/stable/ \
+		https://github.com/aio-libs/aiohttp
 
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-BUILD_DEPENDS=	${PY_SETUPTOOLS} \
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=46.4.0:devel/py-setuptools@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}aiosignal>=1.1.2:devel/py-aiosignal@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}async_timeout>=4.0.0<5.0:devel/py-async_timeout@${PY_FLAVOR} \
