biology/star: fix build on !amd64
The port tries to force AVX2, but it's only available on amd64.

--- a/biology/star/Makefile
+++ b/biology/star/Makefile
@@ -44,6 +44,12 @@ post-patch:
 		${WRKSRC}/bam_cat.h \
 		${WRKSRC}/signalFromBAM.h
 
+.include <bsd.port.options.mk>
+
+.if ${ARCH} != amd64
+MAKE_FLAGS+=	CXXFLAGS_SIMD=""
+.endif
+
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/STAR ${STAGEDIR}${PREFIX}/bin
 
