--- a/biology/coverm/Makefile
+++ b/biology/coverm/Makefile
@@ -10,6 +10,8 @@ WWW=		https://github.com/wwood/CoverM
 LICENSE=	AGPLv3
 LICENSE_FILE=	${WRKSRC}/LICENCE.txt
 
+BROKEN_i386=	compilation fails, see https://github.com/wwood/CoverM/issues/227
+
 USES=		cargo
 
 USE_GITHUB=	yes
