textproc/libxml2*: update to 2.15.1, split -core
libxml2 now requires xsltproc from libxslt to build,
yet libxslt depends on libxml2,
so we need to break a dependency cycle.
documentation needed to be split out to a separate port.

libxml2 has therefore been split into two ports,
* libxml2 builds the documentation (unless disabled),
* library and executables in libxml2-core.

Pull in one contributor patch suggested by the former libxml2 maintainer
to address one downstream security issue in recent libxslt versions.

This should address arrowd@'s hint that installing libxml2 should
provide a full-featured package.

While here, deprecate libxml2-python according to upstream plans, we
have very few users in the ports tree, and expire end of 2026Q1.

PR:		291316

--- a/textproc/libxml2-python/Makefile
+++ b/textproc/libxml2-python/Makefile
@@ -2,31 +2,50 @@ PORTNAME=	libxml2-python
 PORTREVISION=	0
 CATEGORIES=	textproc gnome python
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+PKGNAMESUFFIX=	# blank, to override the one in the master port
 
 COMMENT=	Python interface for XML parser library for GNOME
-MASTERDIR=	${.CURDIR}/../libxml2
 
+DEPRECATED=	Using these bindings is discouraged by upstream, see https://gitlab.gnome.org/GNOME/libxml2/-/issues/891 and https://gitlab.gnome.org/GNOME/libxml2/-/issues/924
+EXPIRATION_DATE=2026-03-31
+
+# doxygen already listed in libxml2-core/Makefile
 BUILD_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}setuptools>0:devel/py-setuptools@${PY_FLAVOR}
+RUN_DEPENDS=	libxml2=${PORTVERSION}:textproc/libxml2 # docs
 
-USES+=		gettext-runtime gnome python shebangfix
-USE_GNOME=	libxml2
+USES+=		gnome localbase python shebangfix
+USE_GNOME=	libxml2 # pulls in libxml2-core
 USE_PYTHON=	autoplist distutils # generator.py not found in PEP-517 environment
 SHEBANG_GLOB=	*.py*
 
-OPTIONS_EXCLUDE=	${OPTIONS_DEFINE} ${OPTIONS_GROUP_LEGACY}
+# work around Makefile not reliably defining doxygen --without-docs but --with-python
+MAKE_ARGS+=	DOXYGEN=${LOCALBASE}/bin/doxygen
 
-# Tell master port we're a slave port
-LIBXML2_SLAVE=	python
-# Grab pkg-descr from slave port
-DESCR=		${.CURDIR}/pkg-descr
+# CPPFLAGS addition required so that this port can build with an older libxml2 installed
+CPPFLAGS+=	-I${WRKSRC}/include
+
+DOCSDIR=	${PREFIX}/share/doc/libxml2-python
+EXAMPLESDIR=	${PREFIX}/share/examples/libxml2-python
+MASTERDIR=	${.CURDIR}/../libxml2-core
 
 BUILD_WRKSRC=	${WRKSRC}/python
 INSTALL_WRKSRC=	${BUILD_WRKSRC}
+TEST_WRKSRC=	${BUILD_WRKSRC}
+
+# Grab pkg-descr from slave port
+DESCR=		${.CURDIR}/pkg-descr
 
 # Don't append pkg-plist from master port
 PLIST=
 
-DOCSDIR=	${PREFIX}/share/doc/libxml2-python
-EXAMPLESDIR=	${PREFIX}/share/examples/libxml2-python
+OPTIONS_EXCLUDE=	${OPTIONS_DEFINE:NPYTHON} ${OPTIONS_GROUP_LEGACY}
+OPTIONS_SLAVE=		PYTHON
+
+pre-build:
+	( cd ${WRKSRC}     && ${DO_MAKE_BUILD} libxml2.la && \
+	  cd ${WRKSRC}/doc && ${DO_MAKE_BUILD} )
+
+post-install:
+	${STRIP_CMD} ${STAGEDIR}${PYTHON_LIBDIR}/site-packages/libxml2mod${PYTHON_SOABI}.so
 
 .include "${MASTERDIR}/Makefile"
