--- a/security/osv-scanner/Makefile
+++ b/security/osv-scanner/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	osv-scanner
 DISTVERSIONPREFIX=	v
 DISTVERSION=	2.3.2
+PORTREVISION=	1
 CATEGORIES=	security
 
 MAINTAINER=	dutra@FreeBSD.org
