Qt6: Update to 6.10.2
January 29, 2026 by Jani Heikkinen

Qt 6.10.2 is now available for download. As a patch release, Qt 6.10.2
doesn’t introduce new features, but it delivers around 300 bug fix,
security improvements, and quality enhancements on top of Qt 6.10.1.
For a full overview of the most notable changes, take a look at the Qt
6.10.2 release notes.

Announcement:
https://www.qt.io/blog/qt-6.10.2-released
Release notes:
https://code.qt.io/cgit/qt/qtreleasenotes.git/about/qt/6.10.2/release-note.md

FreeBSD ports changes:
devel/qt6-base:
- Disable the reduced_relocations feature. Prior to Qt 6.10.0, this was
  only enabled if the compiler was GCC, but we are seeing crashes in
  certain ports such as misc/bibletime, multimedia/obs-studio, and
  net-p2p/qbittorrent. [1]
- Rebase patches

graphics/qt6-wayland:
- Add a pre-configure check to test if devel/qt6-base was built with
  the WAYLAND option. This module cannot be built if the WAYLAND
  option is disabled in devel/qt6-base. [2]

www/qt6-webengine:
- Patched with security patches up to Chromium version: 144.0.7559.109
- Define NODEJS_EXECUTEABLE in the configure environment after [3]. This
  is forward porting for the post-release security rollup and not part of
  the official release. Future releases [3][4] will likely require this.
- Remove upstreamed patches

  [3] https://code.qt.io/cgit/qt/qtwebengine-chromium.git/commit/?h=134-based&id=cf510ebd4e870eb24fb5bc1d1ddcc5442247672d
  [4] https://code.qt.io/cgit/qt/qtwebengine-chromium.git/commit/?h=140-based&id=aab0f6f0928e7e4f73832abba9a00b7946b7e459

x11-toolkits/qt6-declarative
- Remove upsteamed patches

The Qt python bindings have also been updated along with their
respective tools.

PySide6: Update to 6.10.2
PyQt6: Update to 6.10.2

PR:		292376 [1], 292273 [2]
Reported by:	yuri [1], jbo [2]
MFH:		2026Q1
Security:	73ff246b-04b2-11f1-84fc-4ccc6adda413

--- a/www/qt6-webengine/Makefile
+++ b/www/qt6-webengine/Makefile
@@ -14,7 +14,7 @@ PORTNAME?=	webengine
 DISTVERSION=	${QT6_VERSION}
 # This is the parent port of print/qt6-pdf. Please always keep 'PORTREVISION?='
 # and reset the value to '0' only after increasing QT6_VERSION in Mk/Uses/qt.mk.
-PORTREVISION?=	4
+PORTREVISION?=	0
 CATEGORIES?=	www
 PKGNAMEPREFIX=	qt6-
 
@@ -33,14 +33,15 @@ LIB_DEPENDS=	libfreetype.so:print/freetype2 \
 USES=		cmake compiler:c++20-lang gl localbase:ldflags ninja:build \
 		pkgconfig python:build qt-dist:6,webengine
 USE_GL=		opengl
+USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 USE_QT=		base declarative tools
 USE_XORG=	x11 xcb xcomposite xcursor xdamage xext xfixes xi xkbfile \
 		xrandr xrender xscrnsaver xshmfence xtst
 
+CONFIGURE_ENV=	NODEJS_EXECUTABLE="${LOCALBASE}/bin/node"
+
 CMAKE_ON=	QT_FEATURE_webengine_system_ffmpeg \
 		QT_FEATURE_webengine_proprietary_codecs
-
-USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
 .if defined(BUILD_QTPDF)
 CMAKE_ON+=	QT_FEATURE_qtpdf_build
