www/angie: Update 1.11.2 => 1.11.3 (fix CVE-2026-1642, possible MITM attack)
Security: An attacker in a man-in-the-middle (MITM) position before a
proxied server using TLS, given conditions beyond the attacker's
control, could inject plaintext data into the response before the TLS
handshake begins (CVE-2026-1642); the fix was ported from nginx 1.29.5.

Changelog:
https://en.angie.software/angie/docs/oss_changes/#angie-1-11-3

- Bump PORTREVISION in www/angie-module-*.
- Fix using of ANGIE_PORTREVISION in RUN_DEPENDS for modules.
- Replace INSTALL_MAN with INSTALL_DATA for documentation.
- Unroll "for" loops with 1-2 items - simplify Makefile and call
  "INSTALL_*" 1 time instead of several.

PR:		293034
Security:	CVE-2026-1642
MFH:		2026Q1
(cherry picked from commit 8622849d0c2ee6d2e534f2bd12d8c6d603799f12)

--- a/www/angie-module-auth-jwt/Makefile
+++ b/www/angie-module-auth-jwt/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	angie-module-auth-jwt
 MODULE_VERSION=	0.9.0
-MODULE_PORTREVISION=	2
+MODULE_PORTREVISION=	3
 GH_TUPLE=	kjdev:nginx-auth-jwt:${MODULE_VERSION}:module
 
 COMMENT=	Angie auth-jwt dynamic module
@@ -21,7 +21,7 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/objs/ngx_http_auth_jwt_module.so \
 	    ${STAGEDIR}${MODDIR}
 
-	${INSTALL_MAN} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
 
 do-install-DEBUG-on:
 	${INSTALL} ${COPY} -m ${_SHAREMODE} \
