--- a/www/angie-module-auth-totp/Makefile
+++ b/www/angie-module-auth-totp/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	angie-module-auth-totp
 MODULE_VERSION=	1.1.0
-MODULE_PORTREVISION=	2
+MODULE_PORTREVISION=	3
 GH_TUPLE=	61131:nginx-http-auth-totp:${MODULE_VERSION}:module
 
 COMMENT=	Angie auth-totp dynamic module
@@ -17,7 +17,7 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/objs/ngx_http_auth_totp_module.so \
 	    ${STAGEDIR}${MODDIR}
 
-	${INSTALL_MAN} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
 
 do-install-DEBUG-on:
 	${INSTALL} ${COPY} -m ${_SHAREMODE} \
