--- a/www/angie-module-enhanced-memcached/Makefile
+++ b/www/angie-module-enhanced-memcached/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	angie-module-enhanced-memcached
 MODULE_VERSION=	0.3
-MODULE_PORTREVISION=	2
+MODULE_PORTREVISION=	3
 GH_TUPLE=	bpaquet:ngx_http_enhanced_memcached_module:v${MODULE_VERSION}:module
 
 COMMENT=	Angie enhanced memcached dynamic module
@@ -18,7 +18,7 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/objs/ngx_http_enhanced_memcached_module.so \
 	    ${STAGEDIR}${MODDIR}
 
-	${INSTALL_MAN} ${WRKSRC_module}/README.markdown ${STAGEDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC_module}/README.markdown ${STAGEDIR}${DOCSDIR}
 
 do-install-DEBUG-on:
 	${INSTALL} ${COPY} -m ${_SHAREMODE} \
