--- a/www/angie-module-eval/Makefile
+++ b/www/angie-module-eval/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	angie-module-eval
 MODULE_VERSION=	2016.06.10
-MODULE_PORTREVISION=	2
+MODULE_PORTREVISION=	3
 GH_TUPLE=	openresty:nginx-eval-module:${MODULE_VERSION}:module
 
 COMMENT=	Angie eval dynamic module
@@ -18,7 +18,7 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/objs/ngx_http_eval_module.so \
 	    ${STAGEDIR}${MODDIR}
 
-	${INSTALL_MAN} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
 
 do-install-DEBUG-on:
 	${INSTALL} ${COPY} -m ${_SHAREMODE} \
