--- a/www/angie-module-keyval/Makefile
+++ b/www/angie-module-keyval/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	angie-module-keyval
 MODULE_VERSION=	0.3.0
-MODULE_PORTREVISION=	2
+MODULE_PORTREVISION=	3
 GH_TUPLE=	kjdev:nginx-keyval:${MODULE_VERSION}:module
 
 COMMENT=	Angie keyval dynamic module
@@ -19,7 +19,7 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/objs/ngx_http_keyval_module.so \
 	    ${STAGEDIR}${MODDIR}
 
-	${INSTALL_MAN} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
 
 do-install-DEBUG-on:
 	${INSTALL} ${COPY} -m ${_SHAREMODE} \
