--- a/www/angie-module-ndk/Makefile
+++ b/www/angie-module-ndk/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	angie-module-ndk
 MODULE_VERSION=	0.3.4
-MODULE_PORTREVISION=	2
+MODULE_PORTREVISION=	3
 GH_TUPLE=	vision5:ngx_devel_kit:v${MODULE_VERSION}:module
 
 COMMENT=	Angie NDK dynamic module
@@ -19,7 +19,7 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/objs/ndk_http_module.so \
 	    ${STAGEDIR}${MODDIR}
 
-	${INSTALL_MAN} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC_module}/README.md ${STAGEDIR}${DOCSDIR}
 
 do-install-DEBUG-on:
 	${INSTALL} ${COPY} -m ${_SHAREMODE} \
