--- a/www/angie-module-redis2/Makefile
+++ b/www/angie-module-redis2/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	angie-module-redis2
 MODULE_VERSION=	0.15
-MODULE_PORTREVISION=	2
+MODULE_PORTREVISION=	3
 GH_TUPLE=	openresty:redis2-nginx-module:v${MODULE_VERSION}:module
 
 COMMENT=	Angie redis2 dynamic module
@@ -17,7 +17,7 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/objs/ngx_http_redis2_module.so \
 	    ${STAGEDIR}${MODDIR}
 
-	${INSTALL_MAN} ${WRKSRC_module}/README.markdown ${STAGEDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC_module}/README.markdown ${STAGEDIR}${DOCSDIR}
 
 do-install-DEBUG-on:
 	${INSTALL} ${COPY} -m ${_SHAREMODE} \
