--- a/www/angie-module-set-misc/Makefile
+++ b/www/angie-module-set-misc/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	angie-module-set-misc
 MODULE_VERSION=	0.3.4
-MODULE_PORTREVISION=	2
+MODULE_PORTREVISION=	3
 GH_TUPLE=	vision5:ngx_devel_kit:v${MODULE_VERSION}:ndk
 GH_TUPLE+=	openresty:set-misc-nginx-module:v0.33:module
 
@@ -21,7 +21,7 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/objs/ngx_http_set_misc_module.so \
 	    ${STAGEDIR}${MODDIR}
 
-	${INSTALL_MAN} ${WRKSRC_module}/README.markdown ${STAGEDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC_module}/README.markdown ${STAGEDIR}${DOCSDIR}
 
 do-install-DEBUG-on:
 	${INSTALL} ${COPY} -m ${_SHAREMODE} \
