lang/go126: Add go 1.26
From https://go.dev/doc/go1.26:

  The latest Go release, version 1.26, arrives in February 2026, six
  months after Go 1.25. Most of its changes are in the implementation
  of the toolchain, runtime, and libraries. As always, the release
  maintains the Go 1 promise of compatibility. We expect almost all Go
  programs to continue to compile and run as before.

There are exciting updates in this new Go minor:
- New Green Tea-based garbage collector that cuts GC overhead by an
  observed 10-40%.
- cgo runtime overhead reduced by an observed 30%.
- `go fix` has been rewritten as is now Go's official modernizer. In
  particular, it includes all of `go vet`'s heuristics, making it
  possible to fix the things that the latter identifies.
- Heap base address is now randomized.
- pprof can now (experimentally) identify leaked goroutines.
- New crypto/hpke package includes support for quantum-vulnerable and
  post-quantum hybrid KEMs.

--- a/lang/Makefile
+++ b/lang/Makefile
@@ -126,6 +126,7 @@
     SUBDIR += go-devel
     SUBDIR += go124
     SUBDIR += go125
+    SUBDIR += go126
     SUBDIR += gomacro
     SUBDIR += gprolog
     SUBDIR += gptscript
